<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#f7f7f7"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/ic_baseline_phone_android_24" />

        <LinearLayout
            android:id="@+id/phone_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/phone_number"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView3"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/please_enter_your_phone_number_to_log_in"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/_996xxxxxxxxx"
                android:inputType="phone"
                android:padding="10dp"
                android:textAlignment="center" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/continue_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/code_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/verification_code"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView1"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/please_enter_the_verification_code_from_sms"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editTextCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/code"
                android:inputType="phone"
                android:padding="10dp"
                android:textAlignment="center" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/submit" />

        </LinearLayout>
    </LinearLayout>

</layout>